lab1/Test/L1-A-12-12.output
Error Type A at Line 3
Error Type A at Line 7
Error Type A at Line 14
Error Type A at Line 19
Error Type A at Line 26
Error Type B at Line 35
